patitoParser.py
# Generated from patito.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


from symbolTable import *
from virtualMachine import *


class patitoParser ( Parser ):

    grammarFileName = "patito.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'program'", "';'", "'main'", "'end'", 
                     "'var'", "':'", "','", "'int'", "'float'", "'{'", "'}'", 
                     "'='", "'if'", "'('", "')'", "'else'", "'while'", "'do'", 
                     "'print'", "'>'", "'<'", "'!='", "'+'", "'-'", "'*'", 
                     "'/'", "'void'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "Cte_int", "Cte_float", 
                      "Cte_string", "Id", "WS" ]

    RULE_start = 0
    RULE_programa = 1
    RULE_vars = 2
    RULE_list_var = 3
    RULE_list_id = 4
    RULE_type = 5
    RULE_body = 6
    RULE_statement_loop = 7
    RULE_statement = 8
    RULE_assign = 9
    RULE_condition = 10
    RULE_else = 11
    RULE_cycle = 12
    RULE_f_call = 13
    RULE_exp_loop = 14
    RULE_exp_loop_helper = 15
    RULE_print = 16
    RULE_print_loop = 17
    RULE_print_args = 18
    RULE_expresion = 19
    RULE_expresion_helper = 20
    RULE_expresion_operator = 21
    RULE_exp = 22
    RULE_exp_helper = 23
    RULE_exp_operator = 24
    RULE_termino = 25
    RULE_termino_helper = 26
    RULE_termino_operator = 27
    RULE_factor = 28
    RULE_factor_operator = 29
    RULE_factor_arg = 30
    RULE_cte = 31
    RULE_func = 32
    RULE_id_loop = 33
    RULE_id_loop_prime = 34

    ruleNames =  [ "start", "programa", "vars", "list_var", "list_id", "type", 
                   "body", "statement_loop", "statement", "assign", "condition", 
                   "else", "cycle", "f_call", "exp_loop", "exp_loop_helper", 
                   "print", "print_loop", "print_args", "expresion", "expresion_helper", 
                   "expresion_operator", "exp", "exp_helper", "exp_operator", 
                   "termino", "termino_helper", "termino_operator", "factor", 
                   "factor_operator", "factor_arg", "cte", "func", "id_loop", 
                   "id_loop_prime" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    Cte_int=30
    Cte_float=31
    Cte_string=32
    Id=33
    WS=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programa(self):
            return self.getTypedRuleContext(patitoParser.ProgramaContext,0)


        def EOF(self):
            return self.getToken(patitoParser.EOF, 0)

        def getRuleIndex(self):
            return patitoParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = patitoParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.programa()
            self.state = 71
            self.match(patitoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._Id = None # Token

        def Id(self):
            return self.getToken(patitoParser.Id, 0)

        def body(self):
            return self.getTypedRuleContext(patitoParser.BodyContext,0)


        def vars_(self):
            return self.getTypedRuleContext(patitoParser.VarsContext,0)


        def func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(patitoParser.FuncContext)
            else:
                return self.getTypedRuleContext(patitoParser.FuncContext,i)


        def getRuleIndex(self):
            return patitoParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = patitoParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            pushMain()
            self.state = 74
            self.match(patitoParser.T__0)
            self.state = 75
            localctx._Id = self.match(patitoParser.Id)
            addFunction((None if localctx._Id is None else localctx._Id.text), 'global')
            self.state = 77
            self.match(patitoParser.T__1)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 78
                self.vars_()


            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==27:
                self.state = 81
                self.func()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 87
            self.match(patitoParser.T__2)
            quadruploMain()
            self.state = 89
            self.body()
            imprime()
            self.state = 91
            self.match(patitoParser.T__3)
            runVm()
            deleteAll()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(patitoParser.List_varContext)
            else:
                return self.getTypedRuleContext(patitoParser.List_varContext,i)


        def getRuleIndex(self):
            return patitoParser.RULE_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars" ):
                listener.enterVars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars" ):
                listener.exitVars(self)




    def vars_(self):

        localctx = patitoParser.VarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vars)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(patitoParser.T__4)
            self.state = 97 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 96
                self.list_var()
                self.state = 99 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==33):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._list_id = None # List_idContext
            self._type = None # TypeContext

        def list_id(self):
            return self.getTypedRuleContext(patitoParser.List_idContext,0)


        def type_(self):
            return self.getTypedRuleContext(patitoParser.TypeContext,0)


        def getRuleIndex(self):
            return patitoParser.RULE_list_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList_var" ):
                listener.enterList_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList_var" ):
                listener.exitList_var(self)




    def list_var(self):

        localctx = patitoParser.List_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_list_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            localctx._list_id = self.list_id()
            self.state = 102
            self.match(patitoParser.T__5)
            self.state = 103
            localctx._type = self.type_()
            self.state = 104
            self.match(patitoParser.T__1)
            addVar((None if localctx._list_id is None else self._input.getText(localctx._list_id.start,localctx._list_id.stop)), (None if localctx._type is None else self._input.getText(localctx._type.start,localctx._type.stop)))
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_idContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Id(self):
            return self.getToken(patitoParser.Id, 0)

        def list_id(self):
            return self.getTypedRuleContext(patitoParser.List_idContext,0)


        def getRuleIndex(self):
            return patitoParser.RULE_list_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList_id" ):
                listener.enterList_id(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList_id" ):
                listener.exitList_id(self)




    def list_id(self):

        localctx = patitoParser.List_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_list_id)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(patitoParser.Id)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 108
                self.match(patitoParser.T__6)
                self.state = 109
                self.list_id()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return patitoParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = patitoParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            _la = self._input.LA(1)
            if not(_la==8 or _la==9):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement_loop(self):
            return self.getTypedRuleContext(patitoParser.Statement_loopContext,0)


        def getRuleIndex(self):
            return patitoParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)




    def body(self):

        localctx = patitoParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(patitoParser.T__9)
            self.state = 115
            self.statement_loop()
            self.state = 116
            self.match(patitoParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statement_loopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(patitoParser.StatementContext,0)


        def statement_loop(self):
            return self.getTypedRuleContext(patitoParser.Statement_loopContext,0)


        def getRuleIndex(self):
            return patitoParser.RULE_statement_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement_loop" ):
                listener.enterStatement_loop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement_loop" ):
                listener.exitStatement_loop(self)




    def statement_loop(self):

        localctx = patitoParser.Statement_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statement_loop)
        try:
            self.state = 122
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13, 17, 19, 33]:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.statement()
                self.state = 119
                self.statement_loop()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(patitoParser.AssignContext,0)


        def condition(self):
            return self.getTypedRuleContext(patitoParser.ConditionContext,0)


        def cycle(self):
            return self.getTypedRuleContext(patitoParser.CycleContext,0)


        def f_call(self):
            return self.getTypedRuleContext(patitoParser.F_callContext,0)


        def print_(self):
            return self.getTypedRuleContext(patitoParser.PrintContext,0)


        def getRuleIndex(self):
            return patitoParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = patitoParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement)
        try:
            self.state = 129
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.assign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.condition()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 126
                self.cycle()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 127
                self.f_call()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 128
                self.print_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._Id = None # Token

        def Id(self):
            return self.getToken(patitoParser.Id, 0)

        def expresion(self):
            return self.getTypedRuleContext(patitoParser.ExpresionContext,0)


        def getRuleIndex(self):
            return patitoParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)




    def assign(self):

        localctx = patitoParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            localctx._Id = self.match(patitoParser.Id)
            pushOperand((None if localctx._Id is None else localctx._Id.text), '', '', 0, 0)
            self.state = 133
            self.match(patitoParser.T__11)
            pushOperator('=')
            self.state = 135
            self.expresion()
            cuadruploAssign()
            self.state = 137
            self.match(patitoParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(patitoParser.ExpresionContext,0)


        def body(self):
            return self.getTypedRuleContext(patitoParser.BodyContext,0)


        def else_(self):
            return self.getTypedRuleContext(patitoParser.ElseContext,0)


        def getRuleIndex(self):
            return patitoParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)




    def condition(self):

        localctx = patitoParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(patitoParser.T__12)
            self.state = 140
            self.match(patitoParser.T__13)
            self.state = 141
            self.expresion()
            self.state = 142
            self.match(patitoParser.T__14)
            ifElse1()
            self.state = 144
            self.body()
            self.state = 145
            self.else_()
            self.state = 146
            self.match(patitoParser.T__1)
            ifElse2()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(patitoParser.BodyContext,0)


        def getRuleIndex(self):
            return patitoParser.RULE_else

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElse" ):
                listener.enterElse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElse" ):
                listener.exitElse(self)




    def else_(self):

        localctx = patitoParser.ElseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_else)
        try:
            self.state = 153
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16]:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.match(patitoParser.T__15)
                ifElse3()
                self.state = 151
                self.body()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CycleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(patitoParser.BodyContext,0)


        def expresion(self):
            return self.getTypedRuleContext(patitoParser.ExpresionContext,0)


        def getRuleIndex(self):
            return patitoParser.RULE_cycle

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCycle" ):
                listener.enterCycle(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCycle" ):
                listener.exitCycle(self)




    def cycle(self):

        localctx = patitoParser.CycleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_cycle)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(patitoParser.T__16)
            pushCont()
            self.state = 157
            self.body()
            self.state = 158
            self.match(patitoParser.T__17)
            self.state = 159
            self.match(patitoParser.T__13)
            self.state = 160
            self.expresion()
            returnWhile()
            self.state = 162
            self.match(patitoParser.T__14)
            self.state = 163
            self.match(patitoParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class F_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Id(self):
            return self.getToken(patitoParser.Id, 0)

        def exp_loop(self):
            return self.getTypedRuleContext(patitoParser.Exp_loopContext,0)


        def getRuleIndex(self):
            return patitoParser.RULE_f_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterF_call" ):
                listener.enterF_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitF_call" ):
                listener.exitF_call(self)




    def f_call(self):

        localctx = patitoParser.F_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_f_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(patitoParser.Id)
            self.state = 166
            self.match(patitoParser.T__13)
            self.state = 167
            self.exp_loop()
            self.state = 168
            self.match(patitoParser.T__14)
            self.state = 169
            self.match(patitoParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp_loopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(patitoParser.ExpresionContext,0)


        def exp_loop_helper(self):
            return self.getTypedRuleContext(patitoParser.Exp_loop_helperContext,0)


        def getRuleIndex(self):
            return patitoParser.RULE_exp_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp_loop" ):
                listener.enterExp_loop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp_loop" ):
                listener.exitExp_loop(self)




    def exp_loop(self):

        localctx = patitoParser.Exp_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_exp_loop)
        try:
            self.state = 175
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14, 23, 24, 30, 31, 33]:
                self.enterOuterAlt(localctx, 1)
                self.state = 171
                self.expresion()
                self.state = 172
                self.exp_loop_helper()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp_loop_helperContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(patitoParser.ExpresionContext,0)


        def exp_loop_helper(self):
            return self.getTypedRuleContext(patitoParser.Exp_loop_helperContext,0)


        def getRuleIndex(self):
            return patitoParser.RULE_exp_loop_helper

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp_loop_helper" ):
                listener.enterExp_loop_helper(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp_loop_helper" ):
                listener.exitExp_loop_helper(self)




    def exp_loop_helper(self):

        localctx = patitoParser.Exp_loop_helperContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_exp_loop_helper)
        try:
            self.state = 182
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 177
                self.match(patitoParser.T__6)
                self.state = 178
                self.expresion()
                self.state = 179
                self.exp_loop_helper()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def print_loop(self):
            return self.getTypedRuleContext(patitoParser.Print_loopContext,0)


        def getRuleIndex(self):
            return patitoParser.RULE_print

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint" ):
                listener.enterPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint" ):
                listener.exitPrint(self)




    def print_(self):

        localctx = patitoParser.PrintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_print)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.match(patitoParser.T__18)
            self.state = 185
            self.match(patitoParser.T__13)
            self.state = 186
            self.print_loop()
            self.state = 187
            self.match(patitoParser.T__14)
            self.state = 188
            self.match(patitoParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_loopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def print_args(self):
            return self.getTypedRuleContext(patitoParser.Print_argsContext,0)


        def print_loop(self):
            return self.getTypedRuleContext(patitoParser.Print_loopContext,0)


        def getRuleIndex(self):
            return patitoParser.RULE_print_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint_loop" ):
                listener.enterPrint_loop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint_loop" ):
                listener.exitPrint_loop(self)




    def print_loop(self):

        localctx = patitoParser.Print_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_print_loop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 190
            self.print_args()
            cuadruploPrint()
            self.state = 194
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 192
                self.match(patitoParser.T__6)
                self.state = 193
                self.print_loop()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_argsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._Cte_string = None # Token

        def expresion(self):
            return self.getTypedRuleContext(patitoParser.ExpresionContext,0)


        def Cte_string(self):
            return self.getToken(patitoParser.Cte_string, 0)

        def getRuleIndex(self):
            return patitoParser.RULE_print_args

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint_args" ):
                listener.enterPrint_args(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint_args" ):
                listener.exitPrint_args(self)




    def print_args(self):
